--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "auth0-lock": "^10.4.0",
     "enzyme": "^2.4.1",
     "eslint-plugin-flowtype": "^2.18.1",
+    "history": "^4.4.0",
     "jasmine-enzyme": "^1.2.0",
     "jwt-decode": "^2.1.0",
     "node-sass": "^3.10.1",
@@ -59,7 +60,8 @@
     "react-cookie": "^0.4.8",
     "react-dom": "^15.3.2",
     "react-google-login": "^2.5.2",
-    "react-router": "^4.0.0-alpha.3",
+    "react-router": "next",
+    "react-router-addons-controlled": "^0.0.1",
     "redux": "^3.6.0",
     "redux-batched-actions": "^0.1.3",
     "redux-devtools": "^3.3.1",
