--- a/package.json
+++ b/package.json
@@ -1,75 +1,70 @@
 {
-  "name": "office",
+  "name": "Bottle-Frontend2",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "6.4.1",
-    "babel-core": "6.14.0",
-    "babel-eslint": "6.1.2",
-    "babel-jest": "15.0.0",
-    "babel-loader": "6.2.5",
-    "babel-preset-react-app": "^0.2.1",
+    "autoprefixer": "6.5.1",
+    "babel-core": "6.17.0",
+    "babel-eslint": "7.1.1",
+    "babel-jest": "17.0.2",
+    "babel-loader": "6.2.7",
+    "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.0",
-    "css-loader": "0.24.0",
-    "detect-port": "1.0.0",
+    "cross-spawn": "4.0.2",
+    "css-loader": "0.26.0",
+    "detect-port": "1.0.1",
     "dotenv": "2.0.0",
-    "eslint": "3.5.0",
-    "eslint-config-react-app": "^0.2.1",
-    "eslint-loader": "1.5.0",
-    "eslint-plugin-flowtype": "2.18.1",
-    "eslint-plugin-import": "1.12.0",
-    "eslint-plugin-jsx-a11y": "2.2.2",
-    "eslint-plugin-react": "6.3.0",
+    "eslint": "3.8.1",
+    "eslint-config-react-app": "^0.5.0",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.4.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
-    "find-cache-dir": "0.1.1",
     "fs-extra": "0.30.0",
     "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.22.0",
-    "http-proxy-middleware": "0.17.1",
-    "jest": "15.1.1",
+    "html-webpack-plugin": "2.24.0",
+    "http-proxy-middleware": "0.17.2",
+    "jest": "17.0.2",
     "json-loader": "0.5.4",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
-    "postcss-loader": "0.13.0",
+    "postcss-loader": "1.0.0",
     "promise": "7.1.1",
-    "react-dev-utils": "^0.2.1",
+    "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
-    "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.16.1",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "auth0-lock": "^10.4.0",
-    "enzyme": "^2.4.1",
-    "eslint-plugin-flowtype": "^2.18.1",
-    "history": "^4.4.0",
-    "jasmine-enzyme": "^1.2.0",
-    "jwt-decode": "^2.1.0",
-    "node-sass": "^3.10.1",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-cookie": "^0.4.8",
-    "react-dom": "^15.3.2",
-    "react-google-login": "^2.5.2",
+    "auth0-lock": "^10.7.3",
+    "history": "^4.5.0",
+    "node-sass": "^4.1.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-google-login": "^2.5.8",
+    "react-redux": "^5.0.1",
     "react-router": "next",
     "react-router-addons-controlled": "^0.0.1",
     "redux": "^3.6.0",
-    "redux-batched-actions": "^0.1.3",
+    "redux-batched-actions": "^0.1.5",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-saga": "^0.12.0",
+    "redux-devtools-log-monitor": "^1.1.1",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^4.0.2"
+    "sass-loader": "^4.1.1",
+    "svg-inline-loader": "^0.7.1",
+    "svg-inline-react": "^1.0.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -77,33 +72,35 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "jsx",
-      "js",
-      "json"
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
     ],
-    "unmockedModulePathPatterns": [
-      "react",
-      "enzyme",
-      "jasmine-enzyme"
-    ],
-    "setupTestFrameworkScriptFile": "<rootDir>/node_modules/jasmine-enzyme/lib/jest.js",
-    "moduleNameMapper": {
-      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/FileStub.js",
-      "^.+\\.(css|scss)$": "<rootDir>/config/jest/CSSStub.js"
-    },
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
     "testPathIgnorePatterns": [
-      "<rootDir>/(build|docs|node_modules)/"
+      "<rootDir>[/\\\\](build|docs|node_modules)[/\\\\]"
     ],
     "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$"
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    }
   },
   "babel": {
     "presets": [
       "react-app"
     ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
